@@ -1,6 +1,6 @@
 Package: spgrass6
-Version: 0.6-15
-Date: 2010-01-29
+Version: 0.6-16
+Date: 2010-03-29
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
